force-app/main/default/objects/Sales_Support_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Awaiting action from Stakeholder</fullName>
            </value>
            <value>
                <fullName>Cancelled/Withdrawn</fullName>
            </value>
            <value>
                <fullName>Complete/Submitted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Not Supported</fullName>
            </value>
            <value>
                <fullName>On Hold/Postponed</fullName>
            </value>
            <value>
                <fullName>On hold - Information needed</fullName>
            </value>
            <value>
                <fullName>Pending approval</fullName>
            </value>
            <value>
                <fullName>Pending with Legal</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Waiting for Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>