force-app/main/default/objects/Sales_Support_Request__c/fields/Requestor_Department__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Department__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <label>Requestor&apos;s Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>