force-app/main/default/objects/Sales_Support_Request__c/fields/Requestor_s_Country__c.field-meta.xml
<CustomField>
    <fullName>Requestor_s_Country__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <inlineHelpText>The Country of the request creator as default.</inlineHelpText>
    <label>Requestor&apos;s Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>