force-app/main/default/objects/Sales_Support_Request__c/fields/Rush__c.field-meta.xml
<CustomField>
    <fullName>Rush__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rush</label>
    <type>Checkbox</type>
</CustomField>