force-app/main/default/objects/Sales_Support_Request__c/fields/Sales_Support_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Request_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Support Request ID</label>
    <type>Text</type>
</CustomField>