force-app/main/default/objects/Sales_Support_Request__c/fields/Sales_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Status__c</fullName>
    <label>Sales Support Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting for Info</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unable to Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>