force-app/main/default/objects/Sales_Support_Request__c/fields/Service_Family__c.field-meta.xml
<CustomField>
    <fullName>Service_Family__c</fullName>
    <label>Service Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Solutions</fullName>
            </value>
            <value>
                <fullName>Data Centers – IMDC</fullName>
            </value>
            <value>
                <fullName>Data Management – DM DB&amp;R</fullName>
            </value>
            <value>
                <fullName>Destruction Services</fullName>
            </value>
            <value>
                <fullName>Document Management Solutions – DMS</fullName>
            </value>
            <value>
                <fullName>Entertainment Services – Film &amp; Sound</fullName>
            </value>
            <value>
                <fullName>Fulfillment Services – IMFS</fullName>
            </value>
            <value>
                <fullName>IPM – Escrow Services</fullName>
            </value>
            <value>
                <fullName>Multiple Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Records Management - RM</fullName>
            </value>
            <value>
                <fullName>Release of Information - ROI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>