force-app/main/default/objects/Sales_Support_Request__c/fields/Shell__c.field-meta.xml
<CustomField>
    <fullName>Shell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shell</label>
    <type>Checkbox</type>
</CustomField>