force-app/main/default/objects/Sales_Support_Request__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acct Info</fullName>
            </value>
            <value>
                <fullName>Acquisition Support</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Adding authorized users to IMConnect</fullName>
            </value>
            <value>
                <fullName>Aditivo + Retroativo</fullName>
            </value>
            <value>
                <fullName>Aditivo Contratual</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Análise</fullName>
            </value>
            <value>
                <fullName>Aplicação de Reajuste</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>AR/AP</fullName>
            </value>
            <value>
                <fullName>Arquivamento de Documentos</fullName>
            </value>
            <value>
                <fullName>Atualização de Dados (Visma/Calipso/SUSE)</fullName>
            </value>
            <value>
                <fullName>Authorized users</fullName>
            </value>
            <value>
                <fullName>Authorized Users/IMC Users</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Both New and Existing contract related</fullName>
            </value>
            <value>
                <fullName>Both New and Existing rates</fullName>
            </value>
            <value>
                <fullName>C&amp;A Report</fullName>
            </value>
            <value>
                <fullName>Cadastramento de Preços</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>Certifications/Standards</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Closure/At Risk</fullName>
            </value>
            <value>
                <fullName>Closures/At Risk</fullName>
            </value>
            <value>
                <fullName>Company Information</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Contract and Rate Schedule</fullName>
            </value>
            <value>
                <fullName>Contract and Schedule A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>