force-app/main/default/objects/Sales_Support_Request__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>