force-app/main/default/objects/Sales_Support_Request__c/fields/Total_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Amount__c</fullName>
    <formula>Related_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>