force-app/main/default/objects/Sales_Support_Request__c/fields/What_are_the_key_differentiators__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_key_differentiators__c</fullName>
    <label>What are the key differentiators?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>