force-app/main/default/objects/Sales_Support_Request__c/fields/What_is_the_probability_that_we_can_win__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_probability_that_we_can_win__c</fullName>
    <label>What is the probability that we can win?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 25%</fullName>
            </value>
            <value>
                <fullName>30-50%</fullName>
            </value>
            <value>
                <fullName>50-60%</fullName>
            </value>
            <value>
                <fullName>70%+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>