force-app/main/default/objects/Sales_Support_Request__c/fields/White_glove_Strategic__c.field-meta.xml
<CustomField>
    <fullName>White_glove_Strategic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White glove/Strategic</label>
    <type>Checkbox</type>
</CustomField>