force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Global_Commercial_Contracts_Support.recordType-meta.xml
<RecordType>
    <fullName>Global_Commercial_Contracts_Support</fullName>
    <active>true</active>
    <label>Global Commercial Contracts Support</label>
</RecordType>