force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Proposal_Management_Request.recordType-meta.xml
<RecordType>
    <fullName>Proposal_Management_Request</fullName>
    <active>true</active>
    <label>Proposal Management</label>
</RecordType>