force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Proposal_Request.recordType-meta.xml
<RecordType>
    <fullName>Proposal_Request</fullName>
    <active>true</active>
    <label>Proposal Request</label>
</RecordType>