force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Sales_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Sales_Support_Request</fullName>
    <active>true</active>
    <label>Opportunity Support</label>
</RecordType>