force-app/main/default/objects/Sales_Support_Request__c/validationRules/Additional_info_session_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_info_session_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   RecordType.Name = &quot;Proposal Management&quot;,
 ISPICKVAL(Related_Opportunity__r.Type, &quot;New Deal&quot;),
OR (
 ISPICKVAL(Strength_of_relationship__c, &apos;&apos;),
 ISPICKVAL(Did_you_have_advance_notice_of_the_RFP__c, &apos;&apos;),
 ISPICKVAL(Does_our_solution_meet_our_customer_need__c, &apos;&apos;),
 ISPICKVAL(Is_price_a_driving_factor_in_the_here__c, &apos;&apos;),
 ISPICKVAL(What_is_the_probability_that_we_can_win__c, &apos;&apos;),
 ISPICKVAL(Do_you_know_the_decision_makers__c, &apos;&apos;),
 ISPICKVAL(Did_you_influence_the_content_scope__c,&apos;&apos;),
 ISPICKVAL(Is_there_any_issue_for_existing_customer__c, &apos;&apos;)
)
)</errorConditionFormula>
    <errorMessage>If Opportunity is new then Additional session is required</errorMessage>
</ValidationRule>