force-app/main/default/objects/Sales_Support_Request__c/validationRules/Conditionally_Require_Not_Spprtd_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Conditionally_Require_Not_Spprtd_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Request_Status__c, &quot;Not Supported&quot;) &amp;&amp; ISBLANK(Not_Supported_Comments__c)</errorConditionFormula>
    <errorDisplayField>Not_Supported_Comments__c</errorDisplayField>
    <errorMessage>Please add the reason why the Request Status is Not Supported.</errorMessage>
</ValidationRule>