force-app/main/default/objects/Sales_Support_Request__c/validationRules/Conditionally_Require_Number_of_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Conditionally_Require_Number_of_Hours</fullName>
    <active>true</active>
    <description>Whenever a Request is in the status of Complete/Submitted, the Number of Hours is required.</description>
    <errorConditionFormula>ISPICKVAL(Request_Status__c, &quot;Complete/Submitted&quot;) &amp;&amp; ISBLANK(Number_of_Hours__c )</errorConditionFormula>
    <errorDisplayField>Number_of_Hours__c</errorDisplayField>
    <errorMessage>Please add the Number of Hours when the request reaches a Status of &apos;Complete/Submitted&apos;.</errorMessage>
</ValidationRule>