force-app/main/default/objects/Sales_Support_Request__c/validationRules/Is_there_any_issue_for_existing_customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_there_any_issue_for_existing_customer</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Is_there_any_issue_for_existing_customer__c, &apos;Yes&apos;), ISBLANK(If_Yes_then_provide_the_details__c) )</errorConditionFormula>
    <errorDisplayField>If_Yes_then_provide_the_details__c</errorDisplayField>
    <errorMessage>If there is an issue for existing customer then please provide the details.</errorMessage>
</ValidationRule>