force-app/main/default/objects/Sales_Support_Request__c/validationRules/Pending_With_Mandate_With_Request_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_With_Mandate_With_Request_Status</fullName>
    <active>true</active>
    <description>Whenever a Request is in the status of On hold - Information needed/Awaiting action from Stakeholder, the GCCS Request Pending With is required.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp; OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),
                                                                   CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c, &apos;Sales_Support_Request__c&apos;))),
    OR(
        ISPICKVAL(Request_Status__c, &quot;On hold - Information needed&quot;),
        ISPICKVAL(Request_Status__c, &quot;Awaiting action from Stakeholder&quot;)
    ),
    ISBLANK(GCCS_Request_Pending_With__c),
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    $Profile.Name &lt;&gt; &apos;IM_Custom Sys Admin&apos;
)</errorConditionFormula>
    <errorDisplayField>GCCS_Request_Pending_With__c</errorDisplayField>
    <errorMessage>This Request is On Hold or Awaiting Action please confirm who it is Pending with.</errorMessage>
</ValidationRule>