force-app/main/default/objects/Sales_Support_Request__c/validationRules/Request_Status_edition_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Status_edition_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.DeveloperName = &quot;Proposal_Management_Request&quot;, ISCHANGED( Request_Status__c ),
AND($Profile.Name &lt;&gt; &quot;IM_Proposal_Services&quot; ,$Profile.Name &lt;&gt; &quot;IM_Custom Sys Admin&quot; , $Profile.Name &lt;&gt; &quot;System Administrator&quot;
))</errorConditionFormula>
    <errorMessage>Change of Request Status is Restricted</errorMessage>
</ValidationRule>