force-app/main/default/objects/Sales_Support_Request__c/validationRules/Request_Status_is_edition_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Status_is_edition_not_allowed</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISCHANGED(Request_Status__c),
($Profile.Name &lt;&gt; &apos;IM_Proposal_Services&apos;),
(RecordType.Name &lt;&gt; &apos;Global Commercial Contracts Support&apos;))</errorConditionFormula>
    <errorDisplayField>Actual_Effort_hours__c</errorDisplayField>
    <errorMessage>Change of Request Status is Restricted</errorMessage>
</ValidationRule>