force-app/main/default/objects/Sales_Support_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>equals</operation>
        <value>Daniel Gregorio</value>
    </filters>
    <label>All</label>
</ListView>