force-app/main/default/objects/Sales_Support_Request__c/listViews/All_Open_Requests.listView-meta.xml
<ListView>
    <fullName>All_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Task_Type__c</field>
        <operation>equals</operation>
        <value>Opportunity Support</value>
    </filters>
    <filters>
        <field>Requestor_s_Country__c</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>All Open Requests</label>
</ListView>