force-app/main/default/objects/Sales_Support_Request__c/listViews/All_Opportunity_Support.listView-meta.xml
<ListView>
    <fullName>All_Opportunity_Support</fullName>
    <columns>Request_Number__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Affected_Countries__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Estimated_Complete_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <filters>
        <field>Owner_Full_Name__c</field>
        <operation>equals</operation>
        <value>Ana Beatriz Franciscone,Amauri Silva,Marcia Jaqueline Arantes da Silva Santana,Matheus Melo,Nidia Citlali Orozco,Eduardo Feregrino,Ana Dalia Hernández</value>
    </filters>
    <label>All Opportunity Support</label>
</ListView>