force-app/main/default/objects/Sales_Support_Request__c/listViews/All_Proposal_Management.listView-meta.xml
<ListView>
    <fullName>All_Proposal_Management</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Related_Account__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Not Needed,Disqualified - Not Applicable,Disqualified - SLA</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Support_Request__c.Proposal_Management_Request</value>
    </filters>
    <label>All Proposal Management</label>
</ListView>