force-app/main/default/objects/Sales_Support_Request__c/listViews/ALM.listView-meta.xml
<ListView>
    <fullName>ALM</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Support_Request__c.Sales_Support_Request</value>
    </filters>
    <filters>
        <field>Owner_Full_Name__c</field>
        <operation>equals</operation>
        <value>NA Sales Support</value>
    </filters>
    <label>ALM</label>
</ListView>