force-app/main/default/objects/Sales_Support_Request__c/listViews/Brazil_SSR_SUCCESS_EM_ABERTO.listView-meta.xml
<ListView>
    <fullName>Brazil_SSR_SUCCESS_EM_ABERTO</fullName>
    <columns>Request_Number__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Related_Customer_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Support_Status__c</columns>
    <columns>Task_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Requestor_s_IM_Division__c</columns>
    <columns>Parent_Sales_Support_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requestor_s_Country__c</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
        <value>Poliane Portela,Rafael Bispo Sousa,leandro carvalhoflor,Gislaine,Célia,Diego Silva,Jessica Karoline,Kelly Rodrigues,Thays,Sarah,Thamiris,Sandra,Poliane,Alexandre,Brenda,Jacilene,Gleici,Fernanda Santos,Beatriz Ribeiro,Claudia,Cristiane</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Brazil SSR - SUCCESS_EM ABERTO</label>
</ListView>