force-app/main/default/objects/Sales_Support_Request__c/listViews/Completed_BoB_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Completed_BoB_Change_Requests</fullName>
    <columns>NAME</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>IMGA__c</columns>
    <columns>Related_BoB_Coverage__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Task_Type__c</field>
        <operation>equals</operation>
        <value>BoB Coverage Change</value>
    </filters>
    <label>Completed BoB Change Requests</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>