force-app/main/default/objects/Sales_Support_Request__c/listViews/Deal_Validation_NA_Sales_Support_Request.listView-meta.xml
<ListView>
    <fullName>Deal_Validation_NA_Sales_Support_Request</fullName>
    <columns>Request_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Total_Annual_Amount__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Primary_product_line__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Queue</filterScope>
    <label>Bookings Verification</label>
    <queue>Deal_Validation_NA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>