force-app/main/default/objects/Sales_Support_Request__c/listViews/GI_Accounts_Support_Queue.listView-meta.xml
<ListView>
    <fullName>GI_Accounts_Support_Queue</fullName>
    <columns>Affected_Account_IMGA__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Requestor_s_Name__c</columns>
    <columns>Request_Number__c</columns>
    <columns>Date_Submitted_2__c</columns>
    <columns>Estimated_Complete_Date__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>GI Accounts Support Queue</label>
    <queue>GSAP_Support_Queue</queue>
</ListView>