force-app/main/default/objects/Sales_Support_Request__c/listViews/Global_Commercial_Contract_Support_Queue_Sales_Support_Request.listView-meta.xml
<ListView>
    <fullName>Global_Commercial_Contract_Support_Queue_Sales_Support_Request</fullName>
    <columns>NAME</columns>
    <columns>Date_Submitted__c</columns>
    <filterScope>Queue</filterScope>
    <label>Global Commercial Contract Support Queue</label>
    <queue>Global_Commercial_Contract_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>